# vmath

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE.txt  Makefile  README.md  annotated.html  annotated.js  annotated_dup.js  bug.html  classes.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components-members.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components.js  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_011_01_4-members.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_011_01_4.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_011_01_4.js  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_012_01_4-members.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_012_01_4.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_012_01_4.js  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_013_01_4-members.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_013_01_4.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_013_01_4.js  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_014_01_4-members.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_014_01_4.html  classmath_1_1core_1_1anonymous__namespace_02matrix_8hpp_03_1_1matrix__components_3_01T_00_01M_00_014_01_4.js  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components-members.html  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components.html  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components.js  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_012_01_4-members.html  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_012_01_4.html  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_012_01_4.js  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_012_01_4__coll__graph.map  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_012_01_4__coll__graph.md5  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_013_01_4-members.html  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_013_01_4.html  classmath_1_1core_1_1anonymous__namespace_02vector_8hpp_03_1_1vector__components_3_01T_00_013_01_4.js  (+278 more)
cmake/: config.cmake
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  main.dox
doc/html/: footer.html
inc/: vmath.hpp
inc/math/: func.hpp  func.inl  functions.hpp  functions.inl  types.hpp
inc/math/core/: matrix.hpp  matrix.inl  quaternion.hpp  quaternion.inl  vector.hpp  vector.inl
inc/math/tuple/: axis_angle.hpp  euler.hpp
inc/vmath/: config.h.in  functions.hpp  functions.inl  glsl_types.hpp  matrix.hpp  matrix2x2.hpp  matrix2x3.hpp  matrix2x4.hpp  matrix3x2.hpp  matrix3x3.hpp  matrix3x4.hpp  matrix4x2.hpp  matrix4x3.hpp  matrix4x4.hpp  matrix_functions.hpp  quaternion.hpp  swizzle.hpp  vector.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_functions.hpp
inc/vmath/core/: matrix.hpp  quaternion.hpp  quaternion.inl  vector.hpp
include/math/: functions.hpp  functions.inl  glsl_types.hpp
include/math/core/: matrix.hpp  matrix.inl  quaternion.hpp  quaternion.inl  vector.hpp  vector.inl
include/vmath/: functions.hpp  functions.inl  glsl_types.hpp  types.hpp
include/vmath/core/: matrix.hpp  matrix.inl  quaternion.hpp  quaternion.inl  vector.hpp  vector.inl
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+28 more)
src/: CMakeLists.txt  main.cpp  test.cpp  vmath.cpp
src/math/: func.hpp  func.inl  types.hpp
src/math/core/: matrix.hpp  matrix2x2.hpp  matrix2x2.inl  matrix2x3.hpp  matrix2x3.inl  matrix2x4.hpp  matrix2x4.inl  matrix3x2.hpp  matrix3x2.inl  (+23 more)
src/vmath/: functions.hpp  functions.inl  types.hpp
test/: CMakeLists.txt  boost_test_config.hpp  functions.cpp  math_tester.cpp  matrix2x2.cpp  matrix2x3.cpp  matrix2x4.cpp  matrix3x2.cpp  matrix3x3.cpp  matrix3x4.cpp  matrix4x2.cpp  matrix4x3.cpp  matrix4x4.cpp  quaternion.cpp  swizzle2.cpp  swizzle3.cpp  swizzle4.cpp  type_lists.hpp  unit_test_runner.cpp  vector2.cpp  vector2_swizzle.cpp  vector3.cpp  vector3_swizzle.cpp  vector4.cpp  vector4_swizzle.cpp
test/math/: axis_angle_unit.cpp  euler_unit.cpp  func_unit.cpp  matrix2x2_unit.cpp  matrix2x3_unit.cpp  matrix2x4_unit.cpp  matrix3x2_unit.cpp  matrix3x3_unit.cpp  matrix3x4_unit.cpp  matrix4x2_unit.cpp  matrix4x3_unit.cpp  matrix4x4_unit.cpp  quaternion_unit.cpp  swizzle2_unit.cpp  swizzle3_unit.cpp  swizzle4_unit.cpp  vector2_swizzle_unit.cpp  vector2_unit.cpp  vector3_swizzle_unit.cpp  vector3_unit.cpp  vector4_swizzle_unit.cpp  vector4_unit.cpp
test/unit/: func.cpp  functions.cpp  matrix2x2.cpp  matrix2x3.cpp  matrix2x4.cpp  matrix3x2.cpp  matrix3x3.cpp  matrix3x4.cpp  matrix4x2.cpp  matrix4x3.cpp  matrix4x4.cpp  quaternion.cpp  swizzle2.cpp  swizzle3.cpp  swizzle4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
(+48 files in other folders)
