set(VMATH_DOXYGEN_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(VMATH_DOXYGEN_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}")
set(VMATH_DOXYGEN_DOXYFILE_IN "${VMATH_DOXYGEN_SOURCE_DIR}/Doxyfile.in")
set(VMATH_DOXYGEN_DOXYFILE "${VMATH_DOXYGEN_BINARY_DIR}/Doxyfile")

find_package(Doxygen)
if(NOT DOXYGEN_FOUND)
	message(FATAL_ERROR "Doxygen not found. Required to build documentation.")
endif()

configure_file(${VMATH_DOXYGEN_DOXYFILE_IN} ${VMATH_DOXYGEN_DOXYFILE} @ONLY)

add_custom_target(doc ALL ${DOXYGEN_EXECUTABLE} ${VMATH_DOXYGEN_DOXYFILE}
	WORKING_DIRECTORY ${VMATH_DOXYGEN_BINARY_DIR}
	COMMENT "Generating HTML documentation" VERBATIM)
