find_package(Boost COMPONENTS unit_test_framework REQUIRED)
include_directories(${Boost_INCLUDE_DIR})

find_package(Boost 1.34.0 COMPONENTS unit_test_framework REQUIRED)

if(WIN32)
	set(BOOST_TEST_HEADER_ONLY ON)
endif()

function(add_boost_test SOURCE_FILE)
	get_filename_component(TEST_NAME ${SOURCE_FILE} NAME_WE)
	add_executable(${TEST_NAME} EXCLUDE_FROM_ALL ${SOURCE_FILE})
	if(${BOOST_TEST_HEADER_ONLY})
		add_definitions(-DBOOST_TEST_HEADER_ONLY)
	else()
		target_link_libraries(${TEST_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
	endif()
	add_test(${TEST_NAME} ${TEST_NAME})
	add_dependencies(check ${TEST_NAME})
endfunction()

add_boost_test(vector2.cpp)
add_boost_test(vector3.cpp)
add_boost_test(vector4.cpp)
add_boost_test(functions.cpp)

#file(GLOB TEST_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
#foreach(TEST_SRC ${TEST_SRCS})
#	add_boost_test(${TEST_SRC})
#endforeach()
